web_services/archive/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: web-services
  labels:
    name: web-services
